Final Project Commit

--- a/CRUD/src/main/resources/application.properties
+++ b/CRUD/src/main/resources/application.properties
@@ -25,6 +25,14 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
+
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.connection-timeout=30000
+
+
 ## Method 2
 #spring.application.name=CRUD
 #server.port=8081
@@ -46,7 +54,7 @@ supabase.bucket=mediaFile
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=adeshak0707@gmail.com
-spring.mail.password=your_app_password
+spring.mail.password=diicdibdtvhwoebz
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
